fixed minor spacing

--- a/static/benchmarks/css/landing_page.sass
+++ b/static/benchmarks/css/landing_page.sass
@@ -47,6 +47,7 @@ $brainscore_blue: #47B7DE
 .text-default
   color: black
   font-family: 'Open Sans', sans-serif
+  width: 85%
   font-size: 20px
   font-weight: 200
   padding-top: 20px
